   option.
 * #779: Add a "--match-archives" flag to the "check" action for selecting the archives to check,
   overriding the existing "archive_name_format" and "match_archives" options in configuration.
 * #779: Only parse "--override" values as complex data types when they're for options of those
   types.
 * #782: Fix environment variable interpolation within configured repository paths.

1.8.4
 * #715: Add a monitoring hook for sending backup status to a variety of monitoring services via the
   Apprise library. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#apprise-hook
 * #748: When an archive filter causes no matching archives for the "rlist" or "info"
   actions, warn the user and suggest how to remove the filter.
 * #768: Fix a traceback when an invalid command-line flag or action is used.
 * #771: Fix normalization of deprecated sections ("location:", "storage:", "hooks:", etc.) to
   support empty sections without erroring.
 * #774: Disallow the "--dry-run" flag with the "borg" action, as borgmatic can't guarantee the Borg
   command won't have side effects.

1.8.3
 * #665: BREAKING: Simplify logging logic as follows: Syslog verbosity is now disabled by
   default, but setting the "--syslog-verbosity" flag enables it regardless of whether you're at an
   interactive console. Additionally, "--log-file-verbosity" and "--monitoring-verbosity" now
   default to 1 (info about steps borgmatic is taking) instead of 0. And both syslog logging and
   file logging can be enabled simultaneously.
 * #743: Add a monitoring hook for sending backup status and logs to Grafana Loki. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook
 * #753: When "archive_name_format" is not set, filter archives using the default archive name
   format.
 * #754: Fix error handling to log command output as one record per line instead of truncating